--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "5.0.1",
     "react-sortablejs": "^6.1.4",
     "react-toastify": "^10.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
