--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-quill": "^2.0.0",
     "react-router": "^6.28.0",
     "react-router-dom": "^7.0.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-sortablejs": "^6.1.4",
     "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4",
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
