--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ecomadmin",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
     "@testing-library/jest-dom": "^5.17.0",
